# FileSystem

./: CMakeLists.txt  main.cpp
src/: Constraints.h  DiskDriver.cpp  DiskDriver.h  FileSystem.cpp  FileSystem.h  Shell.cpp  Shell.h  Tools.h  UserInterface.cpp  UserInterface.h
src/entity/: Directory.cpp  Directory.h  DirectoryItem.cpp  DirectoryItem.h  DiskDriver.cpp  DiskDriver.h  DiskINode.cpp  DiskINode.h  FileIndex.cpp  FileIndex.h  FileOpenItem.cpp  FileOpenItem.h  FileSystemInfo.cpp  FileSystemInfo.h  FreeBlockStack.cpp  FreeBlockStack.h  INode.cpp  INode.h  User.cpp  User.h
